CHANGELOG
--------------------------

ClanSphere 2011.3 Patch 4 >> 2013-XX-XX
___________________________________________________________

-- Version and Update Check URLs have changed with this release
-- Earlier releases might not get notified about future changes

-> Updated CKEditor to 3.6.6
-> Updated CKEditor filebrowser to FCKEditor 2.6.9
-> Updated jQuery to 1.8.3


ClanSphere 2011.3 Patch 3 >> 2013-01-17
___________________________________________________________

>> Security: Fixed language path traversal in core functions (jam2)

-- Recommended PHP version changed to 5.4.10
-- Line and file endings are now unified in the GIT source code repository

-> Added captcha requirement option for users to guestbook mod (hajo)
-> Added delete all comments by userid option to comments mod (hajo)
-> Fixed banner rotation not working with mod rewrite (palle)
-> Fixed board pages translation occuring twice in users home (reported by rapid)
-> Fixed developer themebar path errors for some environments (hajo)
-> Fixed gallery images not shown with most current PHP GD extension (fr33z3m4n)
-> Fixed head messages not shown in board listcat (reported by rapid)
-> Fixed icq profile links and removed status images as they don't work anymore (hajo)
-> Fixed msn profile links by using the cs_html_msnmail function everywhere (hajo)
-> Updated CKEditor to 3.6.4


ClanSphere 2011.3 Patch 2 >> 2012-06-16
___________________________________________________________

-> Changed notifymods to contain a hint for files and board mod functionality (hajo)
-> Fixed emails being malformed in some cases (fr33z3m4n, hajo)
-> Fixed news images not working in view action (hajo)
-> Fixed pagination in medals list not working (reported by astmaih)
-> Fixed redirect messages not working with pdo database drivers (hajo)
-> Fixed rss title and description not escaped (hajo)
-> Improved charset detection by sending a header (hajo)
-> Updated CKEditor to 3.6.3
-> Updated jQuery to 1.7.2

